<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <EditText
        android:id="@+id/Lemail"
        android:layout_width="319dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="Email..."
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:textColor="#0B0707"
        android:textColorHint="#000000"
        android:textCursorDrawable="@drawable/cursorstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Lpwd"
        android:layout_width="317dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/tienne"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textColorHint="#000000"
        android:textCursorDrawable="@drawable/cursorstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lemail" />

    <Button
        android:id="@+id/regbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="51dp"
        android:background="@color/design_default_color_on_secondary"
        android:backgroundTint="#000000"
        android:fontFamily="@font/tienne"
        android:text="@string/user"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_or"
        app:layout_constraintTop_toBottomOf="@+id/login_message" />

    <Button
        android:id="@+id/regbuttonB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="51dp"
        android:background="@color/design_default_color_on_secondary"
        android:fontFamily="@font/tienne"
        android:text="Barber"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/login_or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_message" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="51dp"
        android:background="#000000"
        android:fontFamily="@font/tienne"
        android:text="@string/LogIn_button"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lpwd" />

    <ProgressBar
        android:id="@+id/LogPBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="188dp"
        android:progressDrawable="@color/design_default_color_background"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/tienne"
        android:text="@string/LogIn_message"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/regbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/login_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="@font/tienne"
        android:text="@string/LogIn_or"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/regbutton"
        app:layout_constraintStart_toEndOf="@+id/regbuttonB"
        app:layout_constraintTop_toBottomOf="@+id/login_message" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/tienne"
        android:text="Meet Barber"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Lemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="133dp"
        android:layout_height="129dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/mbicon"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>