<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".PickTimeSlot">

    <LinearLayout
        android:id="@+id/PickTimeSlotTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomborder"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/PickTimeSlotBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/PTSpagetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tienne"
            android:paddingStart="120dp"
            android:paddingTop="16dp"
            android:text="Booking"
            android:textColor="#FFFFFF"
            android:textSize="24sp"></TextView>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/PickTimeSlotTopBar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/InstrPTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="@font/tienne"
                android:paddingTop="16dp"
                android:text="@string/intsr_picktime"
                android:textColor="#FFFFFF"
                android:textSize="18sp">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/PTScontainer"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:fadingEdge="vertical"
                android:fadingEdgeLength="15dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:scrollbarThumbVertical="@android:color/white"
                android:scrollbars="vertical"
                tools:layout_editor_absoluteX="-16dp"
                tools:layout_editor_absoluteY="65dp" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/topborder"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:columnCount="2">

                <TextView
                    android:id="@+id/PTSServiceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="@string/title_service"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PickTimeSlotServiceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="Service"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PTSPriceTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="@string/title_price"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PickTimeSlotServicePrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="RM 0.00"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PTSDateTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="@string/title_dateselected"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PickTimeSlotServiceDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="00/00/00"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PTSTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="@string/title_timeselected"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PickTimeSlotServiceTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="00:00"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PTSTypeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="@string/title_type"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp">

                </TextView>

                <TextView
                    android:id="@+id/PickTimeSlotServiceType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/tienne"
                    android:paddingTop="16dp"
                    android:text="Home/Normal"
                    android:textColor="#FFEB3B"
                    android:textSize="18sp">

                </TextView>

            </androidx.gridlayout.widget.GridLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/PickTimeSlotContinueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="#000000"
                    android:fontFamily="@font/tienne"
                    android:text="Confirm"
                    android:textColor="#FFEB3B"
                    android:textSize="18dp">

                </Button>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_next">
                </ImageView>

            </LinearLayout>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>